--- a/frontend/src/pages/ToysPage/ToysDetail.css
+++ b/frontend/src/pages/ToysPage/ToysDetail.css
@@ -17,8 +17,9 @@
 
 .booking-form {
     position: sticky;
+    width: 30%;
     bottom: 20px;
-    right: 20px;
+    left: 90%;
     border: 1px solid black;
     border-radius: 10px;
     padding: 20px;
@@ -38,5 +39,9 @@
 
 .bot-info-container {
     position: relative;
+    background-color: white;
+}
+
+.review-container {
     background-color: white;
 }
