--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -3,5 +3,9 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: medium;
+}
+
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
 }
