--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -4,6 +4,7 @@ body {
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
+    background-color: rgb(220, 220, 230);
 }
 
 h2 {
