--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -10,3 +10,26 @@ body {
 h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.booking-container {
+    position: relative;
+    border: 1px solid black;
+    top: 200px;
+    background-color: white;
+    border-radius: 20px;
+    width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.edit-button{
+    border: none;
+    font-size: medium;
+    display: flex;
+    background-color: red;
+    color: black;
+    border-radius: 20px;
+}
+.edit-button:hover {
+    box-shadow: 10px 10px 10px black;
+}
