--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -20,6 +20,9 @@
     padding: 10px 10px;
     margin-top: 15px;
     overflow-y: auto;
+    z-index: 1;
+    right: 50px;
+    border: 1px solid rgb(252, 248, 248)
 }
 
 .navigation-tab {}
@@ -28,6 +31,21 @@
     display: flex;
     justify-content: space-around;
     justify-items: center;
+}
+
+.edit-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.edit-button-drop {
+    border: 1px solid black;
+    width: 200px;
+}
+
+.edit-button-drop:hover {
+    background-color: black;
+    color: white
 }
 
 .user-button {
@@ -62,6 +80,7 @@
     width: 40px;
     border-radius: 40px;
     padding: 10px 15px;
+    height: 40px;
 }
 
 .navi-button {
@@ -92,5 +111,4 @@
 
 .home-container {
     align-self: center;
-
 }
