--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -39,13 +39,15 @@
 }
 
 .edit-button-drop {
-    border: 1px solid black;
+    border: none;
+    border-bottom: black;
     width: 200px;
+    height: 50px;
 }
 
 .edit-button-drop:hover {
-    background-color: black;
-    color: white
+    background-color: rgb(22, 199, 239);
+    color: black
 }
 
 .user-button {
