--- a/frontend/src/pages/ToysPage/ToysDetail.css
+++ b/frontend/src/pages/ToysPage/ToysDetail.css
@@ -1,7 +1,7 @@
 .image-container {
+    top: 1000px;
     border: 1px solid black;
     position: relative;
-    top: 200px;
 }
 
 .image-sorurce {
@@ -13,19 +13,105 @@
     background-color: white;
     position: relative;
     top: 100px;
+    padding: 0 20px;
+    display: flex;
+}
+
+.bot-grid {
+    display: flex;
+    flex-direction: row;
 }
 
 .this-img {
     border: black;
-    width: 200px;
+    width: 100%
 }
 
-.img-container-1
-.img-container-2
-.img-container-3
-.img-container-4
-.img-container-5
+.toys-desc {
+    padding: 3%;
+}
 
+.reviews-cont {
+    background-color: white;
+}
+
+.toys-user-img {
+    width: 100px;
+}
+
+.toys-descript {
+    font-size: xx-large;
+}
+
+.toy-title {
+    font-size: med;
+    color: black;
+}
+
+
+/*
+.bottom-info {
+    display: grid;
+    grid-template: "a a a a a a a" 100px;
+    display: flex;
+} */
+
+.toys-bot {}
+
+.image-wrapper {
+    display: grid;
+    position: relative;
+    top: 100px;
+    /* grid-row: 6; */
+    /* grid-template-columns: auto; */
+    /* grid-template: "a b c e f" 100px / 1fr 1fr 1fr 2fr 1fr; */
+    /* grid-template: "a b c d f" 140px / 1fr 1fr 1fr 2fr 1fr; */
+    /* grid-row: 1; */
+}
+
+
+/* .img-container-0 {
+    width: 100px;
+}
+
+.img-container-1 {
+    width: 100px;
+}
+
+.img-container-2 {
+    width: 100px;
+}
+
+.img-container-3 {
+    width: 100px;
+}
+
+.img-container-4 {
+    width: 100px;
+}
+
+.img-container-5 {
+    width: 100px;
+} */
+
+.toys {
+    /* padding: 20px; */
+}
+
+.toys-top {
+    padding: 0 20px;
+    font-size: 20px;
+}
+
+.review-box {
+    font-size: xx-large;
+    padding: 20px;
+}
+
+.stars {
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 .booking-form {
     position: sticky;
