--- a/frontend/src/pages/UsersToy/UsersToy.css
+++ b/frontend/src/pages/UsersToy/UsersToy.css
@@ -1,3 +1,26 @@
 .each-toy {
+    /* padding: 20px;
+    border: 1px solid black;
+    width: 10%; */
+    position: absolute;
+    background-color: white;
+    border-radius: 25px;
+    top: 100px;
+    width: 20%;
+    padding: 10px 40px;
 
+}
+
+.edit-booking-button {
+    width: 50%;
+    border-radius: 100px;
+    background-color: red;
+    color: white;
+    font-size: 50px;
+}
+
+.edit-toy-container {
+    /* position: relative; */
+    /* top: 100px; */
+    /* background-color: white; */
 }
