--- a/frontend/src/pages/ToysPage/ToysPage.css
+++ b/frontend/src/pages/ToysPage/ToysPage.css
@@ -1,20 +1,58 @@
 .toy-container {
     border: 1px solid black;
-    width: 100%;
+    width: 1400px;
     background-color: white;
+    border-radius: 5px;
+    border: 1px solid rgb(220, 220, 220);
+    padding: 40px 0;
 }
 
 .grouper {
-    position: relative;
-    top: 150px;
+    /* position: relative; */
     display: flex;
-    width: 250px;
-    height: 250px;
+    width: 800px;
+    height: auto;
     padding: 20px;
+    background-color: rgba(250, 250, 250, .9);
 }
 
 .toy-grid {
     display: flex;
+    margin-top: 100px;
     flex-wrap: wrap;
     justify-content: center;
+    /* width: 100px; */
+}
+
+.toys-page-image {
+    width: 100%
+}
+
+.toy-info-container {
+    display: flex;
+    padding: 30px, 0;
+    padding-left: 20px;
+}
+
+.info-text {
+    padding: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.link-cla {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    color: black;
+}
+
+.into-same-text {
+    color: darkblue;
+}
+
+.toy-spec-info {
+    padding: 30px;
+}
+
+.toy-price-info {
 }
