--- a/frontend/src/pages/ToysPage/ToysDetail.css
+++ b/frontend/src/pages/ToysPage/ToysDetail.css
@@ -1,6 +1,8 @@
+
+
 .image-container {
     top: 1000px;
-    border: 1px solid black;
+    border: none;
     /* position: relative; */
 }
 
@@ -9,12 +11,13 @@
 }
 
 .top-info-container {
-    border: 1px solid black;
+    border: none;
     background-color: white;
     /* position: relative; */
     top: 100px;
     padding: 0 20px;
     display: flex;
+
 }
 
 .bot-grid {
@@ -31,9 +34,6 @@
     padding: 3%;
 }
 
-.reviews-cont {
-    background-color: white;
-}
 
 .toys-user-img {
     width: 100px;
@@ -49,12 +49,6 @@
 }
 
 
-/*
-.bottom-info {
-    display: grid;
-    grid-template: "a a a a a a a" 100px;
-    display: flex;
-} */
 
 .toys-bot {}
 
@@ -62,6 +56,7 @@
     display: grid;
     /* position: relative; */
     margin-top: 100px;
+    border: none;
     /* grid-row: 6; */
     /* grid-template-columns: auto; */
     /* grid-template: "a b c e f" 100px / 1fr 1fr 1fr 2fr 1fr; */
@@ -103,10 +98,7 @@
     font-size: 20px;
 }
 
-.review-box {
-    font-size: xx-large;
-    padding: 20px;
-}
+
 
 .stars {
     padding: 20px;
@@ -117,8 +109,7 @@
     position: sticky;
     float: right;
     width: 30%;
-    /* bottom: 0px; */
-    /* left: 90%; */
+
     border: 1px solid black;
     border-radius: 10px;
     padding: 20px;
@@ -144,9 +135,5 @@
 
 .bot-info-container {
     /* position: relative; */
-    background-color: white;
-}
-
-.review-container {
     background-color: white;
 }
