--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -3,5 +3,5 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
+    font-size: medium;
 }
