--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -10,20 +10,29 @@
     left: 0;
     top: 0;
     border-bottom: 1px solid purple;
+    margin: 0 auto;
 }
 
-.menu-circle {}
+.menu-circle {
+    font-size: small;
+    padding-left: 10px;
+}
 
 .menu-dropdown {
     position: absolute;
     background-color: white;
     border-radius: 7px;
-    padding: 10px 10px;
+    padding: 0px 10px;
     margin-top: 15px;
     overflow-y: auto;
     z-index: 1;
     right: 50px;
-    border: 1px solid rgb(252, 248, 248)
+    border: 1px solid rgb(252, 248, 248);
+}
+
+ul {
+    padding: 0;
+    margin: 1%;
 }
 
 .navigation-tab {}
@@ -32,22 +41,26 @@
     display: flex;
     justify-content: space-around;
     justify-items: center;
+    vertical-align: middle;
 }
 
 .edit-container {
     display: flex;
     flex-direction: column;
+    border-bottom: 1px solid lightgrey;
 }
 
 .edit-button-drop {
     border: none;
-    border-bottom: black;
     width: 200px;
     height: 50px;
+    /* display: flex; */
+    text-decoration: none;
+    text-align: center;
 }
 
 .edit-button-drop:hover {
-    background-color: rgb(22, 199, 239);
+    background-color: rgba(200, 200, 200, .2);
     color: black
 }
 
@@ -80,10 +93,10 @@
 }
 
 .profile-pic {
-    width: 40px;
-    border-radius: 40px;
+    width: 20px;
+    height: 20px;
+    border-radius: 20px;
     padding: 10px 15px;
-    height: 40px;
 }
 
 .navi-button {
