--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
+    font-size: small;
     background-color: rgb(220, 220, 230);
 }
 
@@ -15,14 +15,14 @@ h2 {
     position: relative;
     border: 1px solid black;
     top: 200px;
-    background-color: white;
-    border-radius: 20px;
-    width: 400px;
+    background-color: rgba(240, 240, 240, .9);
+    border-radius: 9px;
+    width: 50%;
     margin: 0 auto;
     padding: 20px;
 }
 
-.edit-button{
+.edit-button {
     border: none;
     font-size: medium;
     display: flex;
@@ -30,6 +30,11 @@ h2 {
     color: black;
     border-radius: 20px;
 }
+
 .edit-button:hover {
     box-shadow: 10px 10px 10px black;
+}
+
+.bookings-container {
+    /* background-color: white; */
 }
