--- a/frontend/src/pages/HostPage/HostPage.css
+++ b/frontend/src/pages/HostPage/HostPage.css
@@ -1,11 +1,12 @@
 .host-form {
-    position: absolute;
+    position: static;
     display: flex;
+    margin-top: 10%;
     flex-direction: column;
     justify-content: center;
     top: 20%;
-    background-color: white;
-    width: 500px;
+    background-color: rgb(246, 246, 246);
+    width: 50%;
     border-radius: 15px;
     padding: 60px;
 }
@@ -21,20 +22,33 @@
     resize: none;
     width: 95%;
     height: 80px;
-    font-size: large;
+    font-size: medium;
+    background-color: rgb(246, 246, 246);
+    border: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .host-input {
     width: 95%;
     height: 40px;
-    font-size: large;
+    font-size: medium;
+    border: none;
+    border-bottom: 1px solid rgba(13, 1, 147, .2);
+    background-color: rgb(246, 246, 246);
 }
+
+
+/*
+.host-texarea:active::after {
+    border: none;
+} */
 
 .host-submit {
     width: 97%;
     border: none;
-    background-color: teal;
-    border-radius: 15px;
+    background-color: rgb(24, 11, 167);
+    height: 200%;
     font-size: large;
     color: white;
+    padding: 15px;
 }
