--- a/frontend/src/pages/ImagePage/ImagePage.css
+++ b/frontend/src/pages/ImagePage/ImagePage.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     top: 20%;
     background-color: white;
-    width: 500px;
+    /* width: 500px; */
     border-radius: 15px;
     padding: 60px;
 }
@@ -14,6 +14,22 @@
     justify-content: center;
 }
 
-.image-input{
+.image-input {
+    padding: 20px 0;
+    width: 300px;
+}
+
+.add-picture {
+    width: 300px;
+    border: none;
+    background-color: rgb(24, 11, 167);
+    height: 100%;
+    font-size: large;
+    color: white;
+    padding: 15px;
+    border-radius: 2px;
+}
+
+.add-label {
     width: 100%;
 }
