--- a/frontend/src/pages/ToysPage/ToysDetail.css
+++ b/frontend/src/pages/ToysPage/ToysDetail.css
@@ -1,9 +1,5 @@
-
-
 .image-container {
-    top: 1000px;
     border: none;
-    /* position: relative; */
 }
 
 .image-sorurce {
@@ -17,7 +13,15 @@
     top: 100px;
     padding: 0 20px;
     display: flex;
+}
 
+.details-price-form {}
+
+.details-price-fo {
+    font-size: x-large;
+    display: flex;
+    padding-left: 20px;
+    padding-bottom: 20px;
 }
 
 .bot-grid {
@@ -34,7 +38,6 @@
     padding: 3%;
 }
 
-
 .toys-user-img {
     width: 100px;
 }
@@ -48,74 +51,55 @@
     color: black;
 }
 
-
+.date-area-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
 .toys-bot {}
 
-.image-wrapper {
-    display: grid;
-    /* position: relative; */
-    margin-top: 100px;
-    border: none;
-    /* grid-row: 6; */
-    /* grid-template-columns: auto; */
-    /* grid-template: "a b c e f" 100px / 1fr 1fr 1fr 2fr 1fr; */
-    /* grid-template: "a b c d f" 140px / 1fr 1fr 1fr 2fr 1fr; */
-    /* grid-row: 1; */
+.reserve-form:hover {
+    background-color: blue;
 }
 
-
-/* .img-container-0 {
-    width: 100px;
+.form-booking-input {
+    height: 40px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
 }
-
-.img-container-1 {
-    width: 100px;
-}
-
-.img-container-2 {
-    width: 100px;
-}
-
-.img-container-3 {
-    width: 100px;
-}
-
-.img-container-4 {
-    width: 100px;
-}
-
-.img-container-5 {
-    width: 100px;
-} */
 
 .toys {
     /* padding: 20px; */
 }
 
 .toys-top {
-    padding: 0 20px;
+    padding: 0 2px;
     font-size: 20px;
 }
-
-
 
 .stars {
     padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.bs-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: .5fr .5fr .5fr;
+    border-bottom: 1px solid lightgrey;
+}
+
 .booking-form {
     position: sticky;
     float: right;
     width: 30%;
-
     border: 1px solid black;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 2px 2px 2px 2px lightgray;
     background-color: white;
-    top:200px
+    top: 200px;
 }
 
 .details-price {
@@ -126,14 +110,17 @@
 .date-area {
     display: flex;
     flex-direction: column;
+
 }
 
 .reserve-button {
     background-color: red;
     font-size: x-large;
+    width: 100%;
 }
 
 .bot-info-container {
     /* position: relative; */
     background-color: white;
+    padding: 20px;
 }
