--- a/frontend/src/pages/ToysPage/ToysPage.css
+++ b/frontend/src/pages/ToysPage/ToysPage.css
@@ -18,7 +18,7 @@
 
 .toy-grid {
     display: flex;
-    margin-top: 100px;
+    margin-top: 5%;
     flex-wrap: wrap;
     justify-content: center;
     /* width: 100px; */
