--- a/frontend/src/pages/ToysPage/ToysDetailImages.css
+++ b/frontend/src/pages/ToysPage/ToysDetailImages.css
@@ -5,7 +5,7 @@
 .image-wrapper {
     display: grid;
     /* position: relative; */
-    margin-top:8%;
+    margin-top: 8%;
     border: none;
 }
 
@@ -17,6 +17,7 @@
 
 .slide-image {
     width: 100%;
+    /* height: 100%; */
 }
 
 .details-page-container {
@@ -26,19 +27,25 @@
 
 .img-slide-control {
     position: absolute;
-    top: 250px;
+    top: 35%;
     right: 100px;
     border-radius: 40px;
-    background-color: red;
+    background-color: rgba(20, 20, 20 .9);
 }
 
-.slide-img-next {
+.img-slide-container {
+    height: 375px;
+}
+
+ .slide-img-next {
     border: none;
-    position: absolute;
     margin: 0 auto;
-    background-color: rgba(20, 20, 20, 0);
+    background-color: rgba(20, 20, 20, .8);
+    border-radius: 50px;
     font-size: 50px;
-    color: red;
+    width: 70px;
+    height: 70px;
+    color: white;
 }
 
 .slide-img-next:hover {
