--- a/frontend/src/pages/ToysPage/ToysDetailImages.css
+++ b/frontend/src/pages/ToysPage/ToysDetailImages.css
@@ -22,7 +22,7 @@
 
 .details-page-container {
     background-color: white;
-    padding: 0, 10px;
+    /* padding: 0 10px; */
 }
 
 .img-slide-control {
