--- a/frontend/src/pages/ToysPage/ToysDetail.css
+++ b/frontend/src/pages/ToysPage/ToysDetail.css
@@ -10,8 +10,7 @@
 .top-info-container {
     border: none;
     background-color: white;
-    /* position: relative; */
-    top: 100px;
+    margin-top: 15%;
     padding: 0 20px;
     display: flex;
 }
