--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -22,6 +22,19 @@ h2 {
     padding: 20px;
 }
 
+.start-hour {
+
+
+}
+
+.book-timer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    border: 1px solid black;
+    background-color: white;
+}
+
 .edit-button {
     border: none;
     font-size: medium;
@@ -33,6 +46,12 @@ h2 {
 
 .edit-button:hover {
     box-shadow: 10px 10px 10px black;
+}
+
+.booking-edit-form {
+    margin-top: 100px;
+    /* width: 100px; */
+    /* background-color: black; */
 }
 
 .bookings-container {
