--- a/frontend/src/pages/ToysPage/ToysDetailImages.css
+++ b/frontend/src/pages/ToysPage/ToysDetailImages.css
@@ -1,11 +1,11 @@
 .toy-detail-img {
-    width: 100%;
+
 }
 
 .image-wrapper {
     display: grid;
     position: relative;
-    margin-top: 8%;
+    margin-top: 7%;
     border: none;
 }
 
@@ -16,28 +16,44 @@
 .img-slides-col {}
 
 .slide-image {
+    /* max-width: 100%; */
     width: 100%;
-    /* height: 800px; */
+    height: auto;
+
+    /* height: 100%; */
+    /* z-index: 0; */
     /* height: 375px; */
 }
 
 .details-page-container {
     background-color: white;
-    z-index: 950;
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+    z-index: 400;
+    /* left: 0; */
 
     /* padding: 0 10px; */
 }
 
 .img-slide-control {
     position: absolute;
-    top: 35%;
+    top: 50%;
     right: 100px;
+    z-index: 900;
     border-radius: 40px;
     background-color: rgba(20, 20, 20 .9);
 }
 
 .img-slide-container {
     height: 375px;
+    z-index: 500;
+}
+
+body {
+    width: 1000px;
+    margin: 0 auto;;
+
 }
 
  .slide-img-next {
