--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -22,6 +22,7 @@
     position: absolute;
     background-color: white;
     border-radius: 7px;
+    box-shadow: 2px 1px 2px rgba(181, 181, 181, .7);
     padding: 0px 10px;
     margin-top: 15px;
     overflow-y: auto;
@@ -57,6 +58,9 @@ ul {
     /* display: flex; */
     text-decoration: none;
     text-align: center;
+    padding: 10px 0;
+    color: black;
+    font-size: 14px;
 }
 
 .edit-button-drop:hover {
@@ -92,6 +96,12 @@ ul {
     cursor: pointer;
 }
 
+.edit-active {
+    background-color: rgba(200, 200, 200, .2);
+    border: 1px solid rgb(237, 235, 235);
+
+}
+
 .profile-pic {
     width: 20px;
     height: 20px;
@@ -118,6 +128,9 @@ ul {
     box-shadow: 0 3px rgb(181, 181, 181);
     border: 1px solid rgb(227, 227, 227);
     border-radius: 40px;
+    /* background-color: rgba(3, 3, 150, .5); */
+    color: black;
+    /* font-size: 25px; */
     align-self: center;
 }
 
