--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -22,10 +22,29 @@ h2 {
     padding: 20px;
 }
 
-.start-hour {
-
-
+.delete-edit-button {
+    display: flex;
 }
+
+input {
+    width: 100%;
+}
+
+.book-cancel-button {
+    border: none;
+    float: right;
+    font-size: 20px;
+    background-color: white;
+}
+
+.start-hour {
+    display: flex;
+}
+
+.end-hour {
+    display: flex;
+}
+
 
 .book-timer {
     display: grid;
@@ -50,7 +69,10 @@ h2 {
 
 .booking-edit-form {
     margin-top: 100px;
+
     /* width: 100px; */
+    border: 1px solid black;
+    background-color: white;
     /* background-color: black; */
 }
 
