--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,7 +9,7 @@
     z-index: 990;
     left: 0;
     top: 0;
-    border-bottom: 1px solid purple;
+    border-bottom: 1px solid rgb(223, 204, 223);
     margin: 0 auto;
 }
 
