--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,7 +9,7 @@
     z-index: 990;
     left: 0;
     top: 0;
-    border-bottom: 1px solid rgb(223, 204, 223);
+    border-bottom: 1px solid rgb(247, 232, 247);
     margin: 0 auto;
 }
 
@@ -36,11 +36,13 @@ ul {
     margin: 1%;
 }
 
-.navigation-tab {}
+.navigation-tab {
+    display: flex;
+}
 
 .navigation-links {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     justify-items: center;
     vertical-align: middle;
 }
@@ -81,12 +83,6 @@ ul {
     padding: 0 10px;
 }
 
-.navi-button:hover {
-    background-color: rgb(240 240 240);
-    border-radius: 20px;
-    box-shadow: 0 3px rgb(181, 181, 181);
-}
-
 .navi-tab {
     background-color: white;
     position: absolute;
@@ -110,10 +106,20 @@ ul {
 
 .navi-button {
     align-self: center;
+    text-align: center;
     padding: 8px 20px;
     text-decoration: none;
     font-size: larger;
     color: rgb(48, 48, 48);
+
+    /* display: flex; */
+}
+
+.navi-button:hover {
+    background-color: rgb(240 240 240);
+    border-radius: 20px;
+    box-shadow: 0 3px rgb(181, 181, 181);
+    cursor: pointer;
 }
 
 .home-img {
@@ -134,11 +140,19 @@ ul {
 }
 
 .nav-button-container {
+    display: flex;
+    justify-self: center;
+}
 
-
-
+.demo-button {
+    margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    border: none;
+    background-color: inherit;
 }
 
 .home-container {
     align-self: center;
+    margin-left: 20px;
 }
