--- a/frontend/src/pages/HomePage/SplashPage.css
+++ b/frontend/src/pages/HomePage/SplashPage.css
@@ -1,10 +1,16 @@
-.splash-opening-img {}
+.splash-opening-img {
+    content: url(./mclar.webp);
+    width: 900px;
+    border-radius: 10px;
+    position: relative;
+    margin-left: 300px;
+}
 
 .spash-container {
     background-color: white;
     position: absolute;
     left: 0;
-    top: 75px;
+    top: 70px;
     width: 100%;
     height: 100%;
 }
@@ -12,14 +18,89 @@
 .try-hosting-top {
     height: 600px;
     border: 1px solid black;
-    margin-top: -20px;
     background-color: white;
 }
 
 .try-hosting-null {
     height: 600px;
-    border: 1px solid black;
-    background-color: rgb(235, 238, 247);
+    /* border: 1px solid black; */
+    /* background-color: rgb(235, 238, 247); */
 }
 
-.body {}
+.splash-width-container {
+    width: 1200px;
+    margin: 0 auto
+}
+
+.splash-first {
+    /* display: grid; */
+    /* grid-template-columns: 1fr 4fr; */
+}
+
+.splash-text-container {
+    padding: 30px;
+}
+
+
+.splash-find-toy {
+    position: absolute;
+    top: 35px;
+    width: 425px;
+    left: 80px;
+    height: 400px;
+    border-radius: 5px;
+    z-index: 100;
+    background-color: white;
+    box-shadow: 3px 3px 10px grey;
+}
+
+.splash-find-text {
+    height: 40px;
+}
+
+.splash-find-date {
+    display: flex;
+}
+
+.splash-find-print {
+    padding-left: 20px;
+}
+
+.search-button {
+    background-color: rgb(255, 26, 87);
+    padding: 10px;
+    width: 100%;
+    color: white;
+    font-size: large;
+}
+
+.splash-second-img {
+    content: url(./respol_l2.png);
+    width: 100%;
+    border-radius: 17px;
+    margin-top: 50px;
+}
+
+.splash-second-message {
+    position: absolute;
+    top: 610px;
+    right: 250px;
+    width: 350px;
+}
+
+.splash-second-text {
+    color: rgb(235, 240, 254);
+    font-size: 50px;
+}
+
+.splash-para {
+    color: rgb(39, 43, 5);
+    font-size: large;
+}
+
+.learn-more-button {
+    padding: 13px 20px;
+    font-size: larger;
+    border-radius: 5px;
+    background-color: white;
+}
