--- a/frontend/src/pages/ToysPage/ToysPage.css
+++ b/frontend/src/pages/ToysPage/ToysPage.css
@@ -1,31 +1,40 @@
 .toy-container {
     border: 1px solid black;
-    width: 1400px;
+    width: 400px;
     background-color: white;
     border-radius: 5px;
     border: 1px solid rgb(220, 220, 220);
-    padding: 40px 0;
+    /* padding: 40px 0; */
 }
 
 .grouper {
-    /* position: relative; */
+    height: 400px;
     display: flex;
-    width: 800px;
-    height: auto;
+    /* width: 100%; */
     padding: 20px;
     background-color: rgba(250, 250, 250, .9);
 }
 
 .toy-grid {
-    display: flex;
-    margin-top: 5%;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
     flex-wrap: wrap;
-    justify-content: center;
-    /* width: 100px; */
+
+
+}
+
+.toy-grouper-container {
+    background-color: white;
 }
 
 .toys-page-image {
-    width: 100%
+    width: 100%;
+    height: 200px;
 }
 
 .toy-info-container {
@@ -54,5 +63,4 @@
     padding: 30px;
 }
 
-.toy-price-info {
-}
+.toy-price-info {}
