--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,7 +9,8 @@
     z-index: 990;
     left: 0;
     top: 0;
-    border-bottom: 1px solid rgb(247, 232, 247);
+    /* border-bottom: 1px solid rgb(247, 232, 247); */
+    box-shadow: 1px 1px 5px rgb(235, 235, 245);
     margin: 0 auto;
 }
 
