--- a/frontend/src/pages/ToysPage/ToysPage.css
+++ b/frontend/src/pages/ToysPage/ToysPage.css
@@ -1,6 +1,6 @@
 .toy-container {
     border: 1px solid black;
-    width: 400px;
+    width: 300px;
     background-color: white;
     border-radius: 5px;
     border: 1px solid rgb(220, 220, 220);
@@ -8,39 +8,37 @@
 }
 
 .grouper {
-    height: 400px;
-    display: flex;
-    /* width: 100%; */
-    padding: 20px;
+    /* height: 200px; */
+    /* display: flex; */
+    /* width: 1000px; */
+    width: 300px;
+    /* padding: 20px; */
     background-color: rgba(250, 250, 250, .9);
 }
 
 .toy-grid {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-
+    position: relative;
+    top: 100px;
+    border: 1px solid black;
+    display: flex;
     flex-wrap: wrap;
-
-
+    justify-content: center;
 }
 
 .toy-grouper-container {
-    background-color: white;
+    /* background-color: white; */
+    /* width: 100px; */
 }
 
 .toys-page-image {
     width: 100%;
-    height: 200px;
+    height: 180px;
 }
 
 .toy-info-container {
-    display: flex;
-    padding: 30px, 0;
-    padding-left: 20px;
+    /* display: flex; */
+    /* padding: 30px, 0; */
+    /* padding-left: 20px; */
 }
 
 .info-text {
