--- a/frontend/src/pages/ToysPage/ToysPage.css
+++ b/frontend/src/pages/ToysPage/ToysPage.css
@@ -19,7 +19,7 @@
 .toy-grid {
     position: relative;
     top: 100px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
