--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -4,7 +4,7 @@ body {
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
-    background-color: rgb(220, 220, 230);
+    background-color: white;
 }
 
 h2 {
@@ -45,7 +45,6 @@ input {
     display: flex;
 }
 
-
 .book-timer {
     display: grid;
     grid-template-columns: 1fr;
@@ -69,7 +68,6 @@ input {
 
 .booking-edit-form {
     margin-top: 100px;
-
     /* width: 100px; */
     border: 1px solid black;
     background-color: white;
@@ -78,4 +76,9 @@ input {
 
 .bookings-container {
     /* background-color: white; */
+}
+
+.home-body {
+    width: 100%;
+    height: 1000px;
 }
