--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -13,14 +13,15 @@
     position: relative;
     /* margin: 0 auto; */
     margin-top: 100px;
+    /* left: 0; */
     color: rgb(189, 191, 205);
     font-family: 'Kaisei Opti', serif;
     font-size: .7em;
     color: rgb(19, 19, 44);
     background-color: rgb(232, 235, 241);
-    /* width: 100%; */
+    width: 100%;
     height: 420px;
-    padding: 23px
+    padding: 23px;
 }
 
 .footer-tabs {
