--- a/frontend/src/pages/ToysPage/ToysDetailImages.css
+++ b/frontend/src/pages/ToysPage/ToysDetailImages.css
@@ -5,7 +5,6 @@
 .image-wrapper {
     display: grid;
     position: relative;
-    margin-top: 7%;
     border: none;
 }
 
@@ -20,11 +19,7 @@
     width: 100%;
     height: auto;
     max-height: 500px;
-
-
-    /* height: 100%; */
     z-index: 0;
-    /* height: 375px; */
 }
 
 .details-page-container {
@@ -32,16 +27,15 @@
     width: 1000px;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
     z-index: 400;
-    /* left: 0; */
 
-    /* padding: 0 10px; */
 }
 
 .img-slide-control {
     position: absolute;
     top: 50%;
-    right: 100px;
+    right:15px;
     z-index: 900;
     border-radius: 40px;
     background-color: rgba(20, 20, 20 .9);
