--- a/frontend/src/pages/ToysPage/ToysPage.css
+++ b/frontend/src/pages/ToysPage/ToysPage.css
@@ -4,7 +4,12 @@
     background-color: white;
     border-radius: 5px;
     border: 1px solid rgb(220, 220, 220);
-    /* padding: 40px 0; */
+}
+
+.toy-main-info {
+    display: flex;
+    font-size: x-small;
+    margin-left: 10px;
 }
 
 .grouper {
@@ -42,8 +47,8 @@
 }
 
 .info-text {
-    padding: 10px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 0 2.5px;
+    font-family: 'Merriweather Sans', sans-serif;
 }
 
 .link-cla {
@@ -54,11 +59,16 @@
 }
 
 .into-same-text {
-    color: darkblue;
+    color: rgb(170, 170, 187);
 }
 
 .toy-spec-info {
-    padding: 30px;
+    display: flex;
+    font-size: x-small;
+    justify-content: space-between;
+    padding: 10px 10px;
 }
 
-.toy-price-info {}
+.toy-price-info {
+
+}
