--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,6 +9,7 @@
     z-index: 990;
     left: 0;
     top: 0;
+    /* margin-top: 5px; */
     /* border-bottom: 1px solid rgb(247, 232, 247); */
     box-shadow: 1px 1px 5px rgb(142, 142, 149);
     margin: 0 auto;
@@ -24,8 +25,8 @@
     background-color: white;
     border-radius: 7px;
     box-shadow: 2px 1px 2px rgba(181, 181, 181, .7);
-    padding: 0px 10px;
-    margin-top: 15px;
+    padding: 0px 5px;
+    margin-top: 60px;
     overflow-y: auto;
     z-index: 1;
     right: 50px;
@@ -44,8 +45,6 @@ ul {
 .navigation-links {
     display: flex;
     justify-content: space-between;
-    justify-items: center;
-    vertical-align: middle;
 }
 
 .edit-container {
@@ -73,12 +72,10 @@ ul {
 
 .user-button {
     display: flex;
-    flex-direction: row;
-    border: 1px solid rgb(220 220 220);
+    border: none;
     background: transparent;
-    font-size: large;
     width: 100%;
-    border-radius: 50px;
+
     cursor: pointer;
     align-items: center;
     padding: 0 10px;
@@ -117,14 +114,15 @@ ul {
 }
 
 .navi-button:hover {
-    background-color: rgb(240 240 240);
-    border-radius: 20px;
+    /* background-color: rgb(240 240 240); */
+    /* border-radius: 20px; */
     box-shadow: 0 3px rgb(181, 181, 181);
     cursor: pointer;
 }
 
 .home-img {
-    width: 45px;
+    width: 40px;
+    height: 40px;
     border-radius: 40px;
     display: flex;
     justify-items: center;
@@ -132,7 +130,7 @@ ul {
 
 .active {
     box-shadow: 0 3px rgb(181, 181, 181);
-    border: 1px solid rgb(227, 227, 227);
+    /* border: 1px solid rgb(227, 227, 227); */
     border-radius: 40px;
     /* background-color: rgba(3, 3, 150, .5); */
     color: black;
