--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -11,7 +11,7 @@
     top: 0;
     /* margin-top: 5px; */
     /* border-bottom: 1px solid rgb(247, 232, 247); */
-    box-shadow: 1px 1px 5px rgb(142, 142, 149);
+    box-shadow: 2px 2px 10px rgb(208, 208, 218);
     margin: 0 auto;
 }
 
@@ -23,13 +23,13 @@
 .menu-dropdown {
     position: absolute;
     background-color: white;
-    border-radius: 7px;
-    box-shadow: 2px 1px 2px rgba(181, 181, 181, .7);
+    border-radius: 1.5px;
+    box-shadow: 2px 1px 2px rgba(236, 227, 227, 0.7);
     padding: 0px 5px;
     margin-top: 60px;
     overflow-y: auto;
     z-index: 1;
-    right: 50px;
+    right: 0;
     border: 1px solid rgb(252, 248, 248);
 }
 
@@ -57,7 +57,6 @@ ul {
     border: none;
     width: 200px;
     height: 50px;
-    /* display: flex; */
     text-decoration: none;
     text-align: center;
     padding: 10px 0;
@@ -96,21 +95,20 @@ ul {
 }
 
 .profile-pic {
-    width: 20px;
-    height: 20px;
-    border-radius: 20px;
-    padding: 10px 15px;
+    width: 25px;
+    height: 25px;
+    border-radius: 25px;
+    border: 1px solid rgb(175, 193, 238);
+    margin-left: 20px;
 }
 
 .navi-button {
     align-self: center;
     text-align: center;
-    padding: 8px 20px;
+    padding: 5px 20px;
     text-decoration: none;
     font-size: larger;
     color: rgb(48, 48, 48);
-
-    /* display: flex; */
 }
 
 .navi-button:hover {
@@ -121,9 +119,9 @@ ul {
 }
 
 .home-img {
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
+    width: 37px;
+    height: 37px;
+    border-radius: 37px;
     display: flex;
     justify-items: center;
 }
@@ -154,4 +152,8 @@ ul {
 .home-container {
     align-self: center;
     margin-left: 20px;
+}
+
+button:hover {
+    cursor: pointer;
 }
