--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -9,8 +9,6 @@
     z-index: 990;
     left: 0;
     top: 0;
-    /* margin-top: 5px; */
-    /* border-bottom: 1px solid rgb(247, 232, 247); */
     box-shadow: 2px 2px 10px rgb(208, 208, 218);
     margin: 0 auto;
 }
@@ -107,7 +105,7 @@ ul {
     text-align: center;
     padding: 5px 20px;
     text-decoration: none;
-    font-size: larger;
+    font-size: small;
     color: rgb(48, 48, 48);
 }
 
@@ -128,11 +126,9 @@ ul {
 
 .active {
     box-shadow: 0 3px rgb(181, 181, 181);
-    /* border: 1px solid rgb(227, 227, 227); */
     border-radius: 40px;
-    /* background-color: rgba(3, 3, 150, .5); */
     color: black;
-    /* font-size: 25px; */
+    font-weight: bolder;
     align-self: center;
 }
 
