--- a/frontend/src/pages/HostPage/HostPage.css
+++ b/frontend/src/pages/HostPage/HostPage.css
@@ -1,3 +1,11 @@
+.host-heading {
+    width: 100%;
+    margin-top: 0;
+    /* background-color: black; */
+    padding-left: 24%;
+}
+
+
 .host-form {
     display: flex;
     margin-top: 10%;
@@ -15,7 +23,9 @@
 }
 
 .hosts-container {
-    /* background-color: black; */
+    max-width: 60%;
+    min-width: 500px;
+    margin: 0 auto;
 }
 
 .host-texarea {
@@ -23,18 +33,18 @@
     width: 95%;
     height: 80px;
     font-size: medium;
-    background-color: rgb(246, 246, 246);
+    background-color: white;
     border: none;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .host-input {
     width: 95%;
-    height: 40px;
+    height: 50px;
     font-size: medium;
     border: none;
     border-bottom: 1px solid rgba(13, 1, 147, .2);
-    background-color: rgb(246, 246, 246);
+    background-color: white
 }
 
 
@@ -44,11 +54,15 @@
 } */
 
 .host-submit {
-    width: 97%;
     border: none;
-    background-color: rgb(24, 11, 167);
-    height: 200%;
-    font-size: large;
-    color: white;
-    padding: 15px;
+    background-color: rgb(45, 150, 231);
+    width: 100px;
+    font-size: medium;
+    color: rgb(255, 255, 229);
+    padding: 7px;
+}
+
+.host-submit:hover {
+    background-color: rgb(17, 2, 190);
+
 }
