--- a/frontend/src/pages/SplashPage/SplashPage.css
+++ b/frontend/src/pages/SplashPage/SplashPage.css
@@ -3,16 +3,16 @@
     width: 900px;
     border-radius: 10px;
     position: relative;
-    margin-left: 100px;
+    left: 10%;
 }
 
 .spash-container {
     background-color: white;
     position: relative;
     top: 70px;
-    /* width: 1200px; */
+    width: 900px;
     height: 100%;
-    /* margin-left: -300px; */
+    margin: 0 auto;
 }
 
 .splash-main {}
@@ -47,8 +47,8 @@
     position: absolute;
     top: 35px;
     width: 425px;
-    /* left: 40px; */
-    height: 400px;
+    left: -80px;
+    height: auto;
     border-radius: 5px;
     z-index: 100;
     background-color: white;
