--- a/frontend/src/pages/ToysPage/ToysDetailImages.css
+++ b/frontend/src/pages/ToysPage/ToysDetailImages.css
@@ -32,12 +32,12 @@
     background-color: rgba(20, 20, 20, .8);
     border-radius: 50px;
     font-size: 50px;
-    width: 70px;
-    height: 70px;
+    width: 65px;
+    height: 65px;
     color: white;
     position: absolute;
     right: 15px;
-    top: 3%;
+    top: 250px;
 }
 
 .toy-detail-container  {
