--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -12,7 +12,7 @@
 .footer-container {
     position: relative;
     /* margin: 0 auto; */
-    margin-top: 100px;
+    /* margin-top: 100px; */
     /* left: 0; */
     color: rgb(189, 191, 205);
     font-family: 'Kaisei Opti', serif;
