--- a/frontend/src/components/LoginFormPage/index.css
+++ b/frontend/src/components/LoginFormPage/index.css
@@ -1,11 +1,22 @@
-.errors {}
+.errors {
+    background-color: white;
+    height: 20px;
+}
 
 .login-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 30px;
+    z-index: 500;
     /* overflow-y: auto; */
+}
+
+.login-body {
+    background-image: url(./photo-1568605117036-5fe5e7bab0b7.jpeg);
+    margin-top: -50px;
+    height: 650px;
+    z-index: 0;
 }
 
 .signin-button {
@@ -17,7 +28,7 @@
     outline: .0625rem solid transparent;
     background-color: lightblue;
     margin: 20px;
-    font-size: larger;
+    font-size: small;
 }
 
 .signin-button:hover {
@@ -27,10 +38,10 @@
 
 .login-container {
     position: relative;
-    max-width: 580px;
-    max-height: 100%;
+    max-width: 480px;
+    /* height: 550px; */
     margin: auto;
-    min-height: .0625rem;
+    /* min-height: .0625rem; */
     padding-left: 12px;
     padding-right: 12px;
     box-sizing: border-box;
@@ -38,6 +49,8 @@
 }
 
 .username-label {
+    background-color: white;
+    font-size: small;
     /* position: absolute;
     display: inline-block;
     margin-top: .5rem;
@@ -57,11 +70,11 @@
     outline: .0625rem solid transparent; */
 }
 
-.input-lot {
-
-}
+.input-lot {}
 
 .password-label {
+    background-color: white;
+    font-size: small;
     /* position: absolute;
     display: inline-block;
     margin-top: .5rem;
