--- a/frontend/src/components/SignUpFormPage/SignUp.css
+++ b/frontend/src/components/SignUpFormPage/SignUp.css
@@ -6,19 +6,22 @@
     margin-top: 30px;
 }
 
+.login-form {
+    padding-bottom: 100px;
+    margin-bottom: 500px;
+
+}
+
 .container {
     position: relative;
     max-width: 580px;
-    max-height: 100%;
+    height: 275px;
     margin: auto;
-    background-color: rgba(255, 255, 255, .9);
-    min-height: .0625rem;
+    background-color: rgb(255, 255, 255);
     padding-left: 12px;
     padding-right: 12px;
-    box-sizing: border-box;
-    box-shadow: none;
+    box-shadow: 3px 3px 20px grey;
     border-radius: 10px;
-    overflow-y: auto;
     top: 150px;
 }
 
@@ -32,9 +35,9 @@
 }
 
 .input-lot {
-    width: 500px;
+    width: 400px;
     height: 30px;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .email-conmtainer {}
@@ -59,7 +62,7 @@
     border: none;
     border-bottom: 1px solid rgb(100 100 100);
     background: transparent;
-    font-size: larger;
+    font-size: medium;
 }
 
 .error-msg {
