--- a/frontend/src/pages/ToysPage/ToysDetailReview.css
+++ b/frontend/src/pages/ToysPage/ToysDetailReview.css
@@ -1,13 +1,14 @@
 .reviews-cont {
     background-color: white;
     padding: 20px;
+    margin-bottom: 40px;
 }
 
 .review-box {
-    font-size: medium;
+    font-size: small;
     padding: 20px;
     border-bottom: 1px solid lightgrey;
-    width: 50%;
+    width: 40%;
 }
 
 .review-container {
@@ -15,8 +16,22 @@
     padding-left: 20px;
 }
 
-.grid-cont-small  {
+.grid-cont-small {
     display: flex;
+}
+
+.leave-a-review  {
+    border: none;
+    background-color: inherit;
+    margin-left: 30px;
+    color: blue;
+    border-radius: 5px;
+}
+
+.leave-a-review:hover  {
+    background-color: rgb(59, 91, 145);
+    color: white;
+    transition: ease-out 2s;
 }
 
 .split {
@@ -32,7 +47,6 @@
     font-size: xx-small;
     display: flex;
     padding-left: 20px;
-
 }
 
 .review-title {
