--- a/frontend/src/pages/ToysPage/ToysDetail.css
+++ b/frontend/src/pages/ToysPage/ToysDetail.css
@@ -204,3 +204,10 @@
 .header {
     display: flex;
 }
+
+
+/* +++++++++=================booking_----------------------------- */
+
+.booking-additional {
+
+}
