--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -16,7 +16,6 @@
     background-color: rgb(241, 244, 251);
     width: 100%;
     height: 380px;
-    padding: 23px;
     border-top: 1px solid rgb(223, 225, 234);
 }
 
@@ -34,6 +33,7 @@
 .footer-footer {
     display: flex;
     justify-content: center;
+    background-color: rgb(241, 244, 251);
 }
 
 .my-links {
@@ -51,6 +51,27 @@
 .footer-linked:hover {
     color: rgb(0, 255, 132);
     /* box-shadow: 10px 10px 40px rgb(0, 255, 60); */
+}
+
+.footer-head {
+    display: flex;
+    height: 30px;
+    padding: 20px;
+    border-bottom: 1px solid rgb(214, 214, 219);
+}
+
+.footer-links {
+    padding-left: 20px;
+    display: flex;
+    align-self: center;
+}
+
+.footer-links:hover {
+    color: rgb(124, 159, 86);
+}
+
+a:visited {
+    color: rgb(107, 122, 162);
 }
 
 
