--- a/frontend/src/pages/HomePage/HomePage.css
+++ b/frontend/src/pages/HomePage/HomePage.css
@@ -88,7 +88,7 @@ input {
 .home-body-container {
     background-color: rgb(241, 241, 242);
     display: grid;
-    height: 800px;
+    /* height: 800px; */
     margin-top: -30px;
     grid-template-columns: 2fr 6fr;
     overflow-y: scroll;
