--- a/frontend/src/pages/UsersPage/UsersPage.css
+++ b/frontend/src/pages/UsersPage/UsersPage.css
@@ -11,9 +11,18 @@
 .user-container {
     width: 600px;
     margin: 0 auto;
+    background-color: rgba(255, 255, 255, 0.922);
 }
 
 .user-image-container {
     display: flex;
     justify-content: center;
+}
+
+.user-form-container {
+    background-image: url(./openroad.jpeg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: -30px;
 }
