--- a/frontend/src/pages/ToysPage/ToysDetailImages.css
+++ b/frontend/src/pages/ToysPage/ToysDetailImages.css
@@ -13,16 +13,20 @@
 
 .img-slides-col {}
 
-.img-slide-container {
-    box-sizing: content-box;
-    z-index: 500;
+.img-slide-container {}
+
+.image-container {
+    height: auto
 }
+
 
 .slide-image {
     width: 100%;
-    height: 100%;
+    /* height: 500px; */
     object-fit: contain;
-    max-height: 700px;
+    height: auto;
+    margin-top: -50px;
+    /* max-height: 700px; */
     z-index: 1000;
 }
 
@@ -40,9 +44,9 @@
     top: 250px;
 }
 
-.toy-detail-container  {
+.toy-detail-container {
     display: block;
-
+    background-color: white;
 }
 
 .details-page-container {
@@ -60,7 +64,6 @@ body {
     margin: 0 auto;
     ;
 }
-
 
 .slide-img-next:hover {
     border-radius: 50px;
