--- a/frontend/src/pages/ToysPage/ToysDetail.css
+++ b/frontend/src/pages/ToysPage/ToysDetail.css
@@ -215,6 +215,11 @@
 
 /* +++++++++=================booking_----------------------------- */
 
+.sidebar-info {
+    display: flex;
+    justify-content: space-between;
+}
+
 .booking-additional {}
 
 .edit-toy-button {
