--- a/frontend/src/pages/HostPage/HostPage.css
+++ b/frontend/src/pages/HostPage/HostPage.css
@@ -70,6 +70,13 @@
     font-family: 'Roboto', sans-serif
 }
 
+.host-input:hover {
+    cursor: pointer;
+}
+
+.host-texarea:hover {
+    cursor: pointer;
+}
 
 /*
 .host-texarea:active::after {
